--- a/Smartspend/app/src/main/res/layout/activity_register.xml
+++ b/Smartspend/app/src/main/res/layout/activity_register.xml
@@ -110,16 +110,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:backgroundTint="#31453a"
-        android:text="Sign In"
+        android:text="Create Account"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:cornerRadius="24dp"
-        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextInputLayout"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextInputLayout"
         app:layout_constraintWidth_percent="0.85"
         app:strokeColor="#70FFB5"
-        app:strokeWidth="1dp"/>
+        app:strokeWidth="1dp" />
 
     <!-- Horizontal Divider with "or" -->
     <View
