--- a/Smartspend/app/src/main/res/layout/dialog_add_record.xml
+++ b/Smartspend/app/src/main/res/layout/dialog_add_record.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    android:background="@drawable/card_border"
+    android:background="@drawable/popup_border"
 
     android:gravity="center">
 
@@ -21,26 +22,34 @@ android:textStyle="bold"
 android:paddingBottom="16dp" />
 
     <!-- Income Button -->
-<Button
-android:id="@+id/button_income"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:text="Income"
-android:textColor="#FFFFFF"
-android:backgroundTint="#70FFB5"
-android:textSize="18sp"
-android:padding="12dp"
-android:layout_marginBottom="16dp" />
+    <Button
+        android:id="@+id/button_income"
+        android:layout_width="305dp"
+        android:layout_height="78dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#DE31453A"
+        android:padding="12dp"
+        android:text="Income"
+        android:textColor="#6FFDB4"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:cornerRadius="20dp"
+        app:strokeColor="#6FFDB4"
+        app:strokeWidth="3dp" />
 
     <!-- Expense Button -->
-<Button
-android:id="@+id/button_expense"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:text="Expense"
-android:textColor="#FFFFFF"
-android:backgroundTint="#FF6B6B"
-android:textSize="18sp"
-android:padding="12dp" />
+    <Button
+        android:id="@+id/button_expense"
+        android:layout_width="304dp"
+        android:layout_height="78dp"
+        android:backgroundTint="#DE31453A"
+        android:padding="12dp"
+        android:text="Expense"
+        android:textColor="#FD6A6A"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:cornerRadius="20dp"
+        app:strokeColor="#FD6A6A"
+        app:strokeWidth="3dp" />
 
     </LinearLayout>
