--- a/Smartspend/app/src/main/res/layout/activity_login.xml
+++ b/Smartspend/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,7 @@
         app:iconPadding="8dp"
         android:text="Continue with Google"
         android:textColor="#FFFFFF"
-        app:icon="@drawable/ic_add"
+        app:icon="@drawable/ic_google"
         app:iconSize="28dp"
         app:strokeColor="#70FFB5"
         app:strokeWidth="1dp" />
