--- a/Smartspend/app/src/main/res/layout/activity_login.xml
+++ b/Smartspend/app/src/main/res/layout/activity_login.xml
@@ -158,6 +158,7 @@
         android:layout_marginTop="25dp"
         android:backgroundTint="#70FFB5"
         android:clickable="true"
+        android:contentDescription="TODO"
         android:focusable="true"
         app:srcCompat="@drawable/fingerprint_icon"
         app:tint="#6370FFB5" />
