--- a/Smartspend/app/src/main/res/layout/activity_goal_details.xml
+++ b/Smartspend/app/src/main/res/layout/activity_goal_details.xml
@@ -98,4 +98,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
+    <nl.dionsegijn.konfetti.xml.KonfettiView
+        android:id="@+id/konfettiView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
